# cookbook

./: .cursorrules  .gitignore  README.md  TEMPLATE_SPEC.md  notes.md  renovate.json
python-examples/auth-with-email-otp/: Intuned.jsonc  README.md  pyproject.toml
python-examples/auth-with-email-otp/____testParameters/: create.json
python-examples/auth-with-email-otp/api/: list-contracts.py
python-examples/auth-with-email-otp/auth-sessions/: create.py
python-examples/auth-with-email-otp/auth-sessions-instances/test-authsession/: metadata.json
python-examples/auth-with-email-otp/intuned-resources/auth-sessions/: test-auth-session.auth-session.jsonc  test-authsession.auth-session.jsonc
python-examples/auth-with-email-otp/intuned-resources/jobs/: default.job.jsonc  list-contracts.job.jsonc
python-examples/auth-with-email-otp/utils/: resend.py  types_and_schemas.py
python-examples/auth-with-secret-otp/: Intuned.jsonc  README.md  pyproject.toml
python-examples/auth-with-secret-otp/.parameters/auth/: create.json
python-examples/auth-with-secret-otp/____testParameters/: create.json
python-examples/auth-with-secret-otp/api/: list-contracts.py
python-examples/auth-with-secret-otp/auth-sessions/: check.py  create.py
python-examples/auth-with-secret-otp/auth-sessions-instances/test-auth-session/: auth-session.json  metadata.json
python-examples/auth-with-secret-otp/auth-sessions-instances/test-authsession/: metadata.json
python-examples/auth-with-secret-otp/intuned-resources/auth-sessions/: test-auth-session.auth-session.jsonc
python-examples/auth-with-secret-otp/utils/: types_and_schemas.py
python-examples/browser-use/: .env.example  Intuned.jsonc  README.md  pyproject.toml
python-examples/browser-use/.parameters/book_room/: default.json
python-examples/browser-use/____testParameters/: book_room.json  purchase-item.json
python-examples/browser-use/api/: book-room.py  book_room.py  purchase-item.py
python-examples/browser-use/hooks/: setup_context.py
python-examples/captcha-solving-auth-example/: Intuned.json  Intuned.jsonc  README.md  pyproject.toml
python-examples/captcha-solving-auth-example/____testParameters/: create.json
python-examples/captcha-solving-auth-example/api/: details.py  list.py
python-examples/captcha-solving-auth-example/auth-sessions/: create.py
python-examples/captcha-solving-basic-example/: Intuned.json  Intuned.jsonc  README.md  pyproject.toml
python-examples/captcha-solving-basic-example/api/: captcha-solver.py  captcha_solver.py
python-examples/captcha-solving-basic-example/helpers/: captcha.py
python-examples/computer-use/: .env.example  Intuned.jsonc  README.md  pyproject.toml
python-examples/computer-use/____testParameters/: browser-use.json  gemini-computer-use.json  openai-computer-use.json
python-examples/computer-use/api/: anthropic-computer-use.py  browser-use.py  gemini-computer-use.py  openai-computer-use.py
python-examples/computer-use/hooks/: setup_context.py
python-examples/crawl4ai/: Intuned.jsonc  README.md  pyproject.toml
python-examples/crawl4ai/____testParameters/: css-based.json  deep-crawl.json  embedding.json  llm-based.json  multi-crawl.json  simple-crawl.json  statistical.json
python-examples/crawl4ai/api/: deep-crawl.py  multi-crawl.py  simple-crawl.py
python-examples/network-interception/: Intuned.jsonc  README.md  pyproject.toml
python-examples/network-interception/api/: api-interceptor.py  list.py  network-interceptor.py
python-examples/network-interception/utils/: types_and_schemas.py
python-examples/playwright-python/: Intuned.jsonc  README.md  pyproject.toml
python-examples/playwright-python/____testParameters/: pages_number.json  pages_numbr.json  user_info.json
python-examples/playwright-python/api/: 01-basic-navigation.py  02-wait-strategies.py  03-locators-and-selectors.py  04-scrape-single-value.py  05-scrape-list.py  06-click-and-navigate.py  07-fill-form.py  08-handle-new-tabs.py  09-work-with-frames.py  10-page-evaluate.py  11-api-requests.py  12-download-file.py  13-upload-file.py  default.py
python-examples/rpa-auth-example/: Intuned.jsonc  README.md  pyproject.toml
python-examples/rpa-auth-example/____testParameters/: book-consultations.json  create.json
python-examples/rpa-auth-example/api/: book-consultations.py  get-consultations-by-email.py
python-examples/rpa-auth-example/auth-sessions/: create.py
python-examples/rpa-auth-example/utils/: types_and_schemas.py
python-examples/scrapy_playwright_example/: Intuned.jsonc  README.md  pyproject.toml  scrapy.cfg
python-examples/scrapy_playwright_example/____testParameters/: runner.json
python-examples/scrapy_playwright_example/api/: list.py  runner.py
python-examples/scrapy_playwright_example/scrapy_playwright_example/: items.py  middlewares.py  pipelines.py  settings.py
python-examples/scrapy_playwright_example/utils/: types_and_schemas.py
python-examples/simple-firecrawl/: Intuned.jsonc  README.md  pyproject.toml
python-examples/simple-firecrawl/____testParameters/: crawl.json  extract.json  map.json  scrape.json  search.json
python-examples/simple-firecrawl/api/: crawl.py  extract.py  map.py  scrape.py  search.py
python-examples/simple-firecrawl/utils/: __init__.py  browser.py  content.py  location.py  metadata.py  response.py  sitemap.py  types.py  url.py
python-examples/stagehand/: .env.example  AGENTS.md  Intuned.jsonc  README.md  pyproject.toml
python-examples/stagehand/____testParameters/: get-books.json
python-examples/stagehand/api/: get-books.py
python-examples/stagehand/hooks/: setup_context.py
python-examples/starter-bs4/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-bs4/api/: list.py
python-examples/starter-crawl4ai/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-crawl4ai/api/: simple-crawl.py
python-examples/starter-firecrawl/: Intuned.jsonc  README.md  pyproject.toml
python-examples/starter-firecrawl/api/: scrape.py
python-examples/starter-scrapy/: Intuned.jsonc  README.md  pyproject.toml
(+1108 files in other folders)
