[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-with-secret-otp"
version = "0.0.1"
description = "Credentials based authenticated source with secret based OTP"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.11",
    "intuned-browser==0.1.9",
    "pydantic[email]==2.10.6",
    "pyotp==2.9.0",
]

[tool.uv]
package = false
