[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auth-with-secret-otp"
version = "0.0.1"
description = "Multi-step authentication with OTP (One-Time Password) verification. Demonstrates automated login flows with username/password and TOTP codes for accessing protected resources."
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "intuned-browser==0.1.11",
    "pydantic[email]==2.12.5",
    "pyotp==2.9.0",
]

[tool.uv]
package = false
