[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-use-purchase-item"
version = "0.0.1"
description = "Using Browser-Use with Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "AI",
    "Browser Use",
    "intuned-browser-sdk",
    "intuned-runtime-sdk",
    "intuned-runtime-sdk-setup-context-hook",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "browser-use==0.11.2",
    "intuned-browser==0.1.11",
]

[tool.uv]
package = false
