[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "default"
version = "0.0.1"
description = "Empty Intuned project"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "captcha-solving",
]
dependencies = [
    "playwright==1.56.0",
    "intuned-runtime==1.3.11",
    "intuned-browser==0.1.9",
]

[tool.uv]
package = false
