[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captcha-solving-basic-example"
version = "0.0.1"
description = "Project to demonstrate captcha solving capabilities"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "bot-detection",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.11"
]

[tool.uv]
package = false
