[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use"
version = "0.0.1"
description = "AI-powered browser automation with Anthropic, OpenAI, Gemini, and Browser Use"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "intuned-browser==0.1.11",
    "anthropic~=0.75.0",
    "openai~=1.0",
    "python-dateutil~=2.9.0",
    "httpx~=0.28.1",
    "stagehand~=0.5.7",
    "browser-use>=0.1.0",
]

[tool.uv]
package = false
