[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "default"
version = "0.0.1"
description = "Empty Intuned project"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.61.0",
    "intuned-runtime==1.3.37",
    "intuned-browser==0.1.18",
    "crawl4ai==0.9.2",
]

[tool.uv]
package = false
