[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network-interception"
version = "0.0.1"
description = "Network interception to capture paginated API data"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "intuned-browser==0.1.11",
    "pydantic>=2.12.5",
]

[tool.uv]
package = false
