[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "default"
version = "0.0.1"
description = "Empty Intuned project"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "intuned-browser==0.1.11",
]

[tool.uv]
package = false
