[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-consultations-with-auth"
version = "0.0.1"
description = "Credentials based booking automation to book a consultation with a consultant and list the consultations"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.15",
    "intuned-browser==0.1.12",
    "pydantic[email]==2.10.6",
]

[tool.uv]
package = false
