[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapy_playwright_example"
version = "0.0.1"
description = "Scrapy with Playwright integration running on Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "intuned-browser-sdk",
    "scrapy",
    "scrapy-playwright",
]
dependencies = [
    "playwright==1.56",
    "intuned-runtime==1.3.11",
    "intuned-browser==0.1.9",
    "scrapy-playwright>=0.0.44",
]

[tool.uv]
package = false
