[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stagehand-stock-details"
version = "0.0.1"
description = "Using Stagehand with Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
keywords = [
    "Python",
    "AI",
    "Stagehand",
    "intuned-browser-sdk",
    "intuned-runtime-sdk",
    "intuned-runtime-sdk-setup-context-hook",
]
dependencies = [
    "playwright==1.57.0",
    "intuned-runtime==1.3.14",
    "intuned-browser==0.1.11",
    "anthropic~=0.75.0",
    "openai~=1.0",
    "python-dateutil~=2.9.0",
    "httpx~=0.28.1",
    "stagehand~=0.5.7"
]

[tool.uv]
package = false
