[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starter-scrapy"
version = "0.0.1"
description = "Minimal Scrapy starter for Intuned"
authors = [{ name = "Intuned", email = "service@intunedhq.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
keywords = [
    "Python",
    "scrapy",
    "intuned-browser-sdk",
    "starter",
]
dependencies = [
    "playwright==1.61.0",
    "intuned-runtime==1.3.36",
    "intuned-browser==0.1.18",
    "scrapy>=2.13.4",
]

[tool.uv]
package = false
